testing_ground/rantaian-blok/src/components/css/header.css
.header {
    background-color: #d3d3d3;
    min-height: 35vh;
    display: flex;
    flex-direction: row;
    /* align-items: center; */
    /* justify-content: center; */
    font-size: calc(20px + 2vmin);
    color: black;
}

.h1-one {
    text-align-last: left;
    justify-self: left;
    font-size: calc(20px + 2vmin);
}

.h1-two {
    align-self: right;
    justify-self: right;
    font-size: calc(20px + 2vmin);
}

.logo {
    justify-self: center;
    height: 15vmin;
    pointer-events: none;
  }

@media (prefers-reduced-motion: no-preference) {
    .logo {
      animation: App-logo-spin infinite 20s linear;
    }
}

@keyframes App-logo-spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
}

